--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+
+/* Custom scroll */
+.scrollbar-thin {
+  scrollbar-width: thin;
+}
+.scrollbar-thumb-rounded {
+  scrollbar-color: var(--tw-prose-body) transparent;
+}
+.scrollbar-thumb-muted::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 100, 100, 0.2);
+  border-radius: 0.75rem;
+}
