--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,24 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --animate-marquee: marquee var(--duration) infinite linear;
+  --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
+  @keyframes marquee {
+  from {
+    transform: translateX(0);
+    }
+  to {
+    transform: translateX(calc(-100% - var(--gap)));
+    }
+  }
+  @keyframes marquee-vertical {
+  from {
+    transform: translateY(0);
+    }
+  to {
+    transform: translateY(calc(-100% - var(--gap)));
+    }
+  }
 }
 
 :root {
@@ -121,8 +139,6 @@
   }
 }
 
-
-
 /* Custom scroll */
 .scrollbar-thin {
   scrollbar-width: thin;
@@ -133,4 +149,9 @@
 .scrollbar-thumb-muted::-webkit-scrollbar-thumb {
   background-color: rgba(100, 100, 100, 0.2);
   border-radius: 0.75rem;
+}
+
+
+.marquee {
+  animation: scroll var(--duration, 20s) linear infinite;
 }
